# pwnd

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEBUG_FINAL.md  DEBUG_ITERATION_1.md  DEBUG_ITERATION_2.md  DEBUG_ITERATION_3.md  DEPLOYMENT_CHECKLIST.md  FINAL_SUMMARY.txt  GITHUB_SETUP.sh  LICENSE  PROJECT.md  PROMPT_READY_TO_USE.txt  README.md  auto_improve.py  benchmark_queries.sh  boom.sh  build-all.sh  discord_bot.py  go.mod  install-polyglot.sh  install.sh  phi3_subprocess.py  polyglot-test.sh  rebuild.sh  rebuild_full.sh  requirements.txt  setup.sh  start.sh  status.sh  stop-all.sh  stop.sh  test-client.js  test_20_auto.py  test_results_50queries.json
app/: BUILD_LATEST.md  __init__.py  academic.py  auth.py  config.py  cost_tracker.py  db.py  hot_reload.py  job_queue.py  llm_client.py  main.py  models.py  multi_phi3.py  paper_stream.py  phi3_client.py  pipeline.py  prosecution.py  rate_limiter.py  routes.py  routes_auth.py  routes_chat.py  routes_v2.py  search.py  synthesis.py  workers.py
archive/: ANTI_DDOS_SPEC.md  ARCHITECTURE_MAP.md  BUILD_ITERATION_01.md  BUILD_LATEST.md  DEBUG.md  DEBUG_CHEATSHEET.md  DETECTIVE_METHODOLOGY.md  DETECTIVE_PERSONA.md  DETECTIVE_SYSTEM_PROMPT.md  DIAGNOSTIC_REPORT.md  FINALIZATION_REPORT.md  FIXES_APPLIED.md  FRONTEND_AUTO_DONE.md  FRONTEND_UPLOAD_READY.md  IDENTITY.md  LEARNINGS_FROM_OSINT_TOOLS.md  LIVE_SYSTEM_READY.md  MASTER_CONTEXT.md  METHODOLOGY_PROMPT.md  METHODOLOGY_README.md  (+21 more)
archive/polyglot/rust-extract/: Cargo.toml
archive/polyglot/rust-extract/src/: lib.rs  main.rs
wasm-ner/: Cargo.toml
(+202 files in other folders)
